testing overflow style for greensock scrollto fix

--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -1,6 +1,6 @@
 
 .sectionContainer {
-    overflow: hidden;
+/*    overflow: hidden;*/
 /*    margin-bottom: 1150px;*/
 }
 
